# anki-decks

./: .env.example  .gitignore  CLAUDE.md  README.md  add_cards.py  generate.py  new_card.py  new_deck.py  pyproject.toml
ankidecks/: __init__.py  build.py  decks_io.py  models.py  parse.py  scaffold.py
decks/example/: casa.md  deck.yaml  perro.md
decks/example-cloze/: deck.yaml  france-capital.md
decks/python-interview-prep/: a-double-ended-queue-fast-pops-from-both-ends.md  absolute-value-and-min-max-of-two-numbers.md  add-to-remove-from-a-set.md  anonymous-function-lambda.md  any-and-all.md  are-and-allowed-in-python-method-names-empty-save.md  are-dicts-ordered-in-python.md  are-python-strings-mutable.md  ascii-lowercase-uppercase-digits-constants.md  binary-search-into-a-sorted-list.md  chained-comparisons.md  char-code-point.md  check-if-all-chars-unique-interview-classic.md  check-type-of-a-value.md  comprehension-over-a-dict-to-invert-it.md  conditional-assignment-based-on-membership.md  context-manager-auto-cleanup-like-ruby-blocks-for-files.md  convert-between-list-tuple-set-str.md  count-items-matching-a-condition.md  count-occurrences-of-items.md  create-a-set-literal-and-the-empty-set-gotcha.md  deck.yaml  decorators.md  default-fallback-value-ruby-a-b.md  defaultdict-for-auto-initializing-values.md  define-a-constructor-and-instance-attributes.md  define-a-generator-lazy-iterator.md  does-key-in-dict-check-keys-or-values.md  does-python-auto-return-the-last-expression-ruby-does.md  (+90 more)
tests/: test_io.py  test_parse.py  test_scaffold.py
(+14 files in other folders)
