[project]
name = "anki-decks"
version = "0.1.0"
description = "Build Anki .apkg decks from per-card Markdown source"
requires-python = ">=3.10"
dependencies = [
    "genanki>=0.13",
    "PyYAML>=6.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
